--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python-dotenv = "^1.0.0"
 gunicorn = "^21.2.0"
 psycopg2-binary = "^2.9.9"
 whitenoise = "^6.5.0"
+django-widget-tweaks = "^1.5.0"
 
 
 [build-system]
